examples/test/testpolicy17945.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17945
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key8: value14
      key1: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value29
          key39: value36
      podSelector:
        matchLabels:
          key14: value45
          key13: value4
          key44: value22
